fix title wrapping

--- a/web/app/themes/typeforce/assets/styles/pages/_home.scss
+++ b/web/app/themes/typeforce/assets/styles/pages/_home.scss
@@ -41,12 +41,12 @@
     left: 0;
     margin-top: 22px;
     margin-left: $site-pad-hor;
-    max-width: 350px;
+    max-width: 250px;
     width: calc( 95vw - 50px);
     @include media-md {
       margin-top: 43px;
       margin-left: $site-pad-hor-md;
-      max-width: 750px;
+      max-width: 550px;
       width: calc( 87vw - 150px);
     }
     h1 {
